--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,7 @@ body {
 .kontakt,
 .cijene {
   color: #eeeeee;
+  background: #393e46;
 }
 
 .footer {
@@ -155,4 +156,24 @@ body {
 .footer a {
   text-decoration: none;
   color: #393e46;
+}
+
+.text-animated {
+  transition: all 0.5s;
+  transform: translateX(-200px);
+}
+
+.show {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+
+.group-label {
+  cursor: pointer;
+}
+
+#map {
+  height: 400px;
+  width: 100%;
 }
