--- a/src/App.css
+++ b/src/App.css
@@ -177,3 +177,20 @@ body {
   height: 400px;
   width: 100%;
 }
+
+.carousel-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(34, 40, 49, 0.2);
+}
+
+@media (max-width: 768px) {
+  #carousel-col {
+    padding-left: 15px !important;
+    margin-left: 1.5rem !important;
+  }
+}
